force-app/main/default/objects/Job_Ticket__c/Job_Ticket__c.object-meta.xml
<CustomObject>
    <label>Job Ticket</label>
    <nameField>
        <displayFormat>Job #{00000}</displayFormat>
        <label>Job Ticket</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>