force-app/main/default/objects/Job_Ticket__c/fields/Additional_Send_To_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Send_To_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional (2) - Send To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Tickets_AdditionalSend2</relationshipName>
    <type>Lookup</type>
</CustomField>