force-app/main/default/objects/Job_Ticket__c/fields/Additional_Send_To__c.field-meta.xml
<CustomField>
    <fullName>Additional_Send_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional - Send To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>