force-app/main/default/objects/Job_Ticket__c/fields/Additional_Specs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Specs__c</fullName>
    <label>Additional Specs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>