force-app/main/default/objects/Job_Ticket__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government Technology Executive Events</fullName>
            </value>
            <value>
                <fullName>Government Technology</fullName>
            </value>
            <value>
                <fullName>Governing</fullName>
            </value>
            <value>
                <fullName>Center for Digital Government</fullName>
            </value>
            <value>
                <fullName>Center for Digital Education</fullName>
            </value>
            <value>
                <fullName>e.Republic</fullName>
            </value>
            <value>
                <fullName>Use Amex on File (Kelli Widmaier)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>