force-app/main/default/objects/Job_Ticket__c/fields/Bleed__c.field-meta.xml
<CustomField>
    <fullName>Bleed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bleed</label>
    <type>Checkbox</type>
</CustomField>