force-app/main/default/objects/Job_Ticket__c/fields/Clear_Date_Fields__c.field-meta.xml
<CustomField>
    <fullName>Clear_Date_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear Date Fields</label>
    <type>Checkbox</type>
</CustomField>