force-app/main/default/objects/Job_Ticket__c/fields/Co_Designer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Co_Designer_Formula__c</fullName>
    <formula
  >IF(INCLUDES(Select_Co_Designers__c, &quot;Crystal Hopson&quot;), &quot;Crystal Hopson&quot; + BR(), NULL) +
IF(INCLUDES(Select_Co_Designers__c, &quot;Kelly Martinelli&quot;), &quot;Kelly Martinelli&quot; + BR(), NULL) +
IF(INCLUDES(Select_Co_Designers__c, &quot;Lisa Zolfarelli&quot;), &quot;Lisa Zolfarelli&quot; + BR(), NULL) +
IF(INCLUDES(Select_Co_Designers__c, &quot;Shelley Botts&quot;), &quot;Shelley Botts&quot; + BR(), NULL) +
IF(INCLUDES(Select_Co_Designers__c, &quot;Trevor Andersen&quot;), &quot;Trevor Andersen&quot; + BR(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-Designer(s)</label>
    <type>Text</type>
</CustomField>