force-app/main/default/objects/Job_Ticket__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4c</fullName>
            </value>
            <value>
                <fullName>4c - 4/1</fullName>
            </value>
            <value>
                <fullName>RGB</fullName>
            </value>
            <value>
                <fullName>B/W</fullName>
            </value>
            <value>
                <fullName>2c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>