force-app/main/default/objects/Job_Ticket__c/fields/Crop_Marks__c.field-meta.xml
<CustomField>
    <fullName>Crop_Marks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crop Marks</label>
    <type>Checkbox</type>
</CustomField>