force-app/main/default/objects/Job_Ticket__c/fields/Custom_PMS__c.field-meta.xml
<CustomField>
    <fullName>Custom_PMS__c</fullName>
    <label>Custom PMS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>