force-app/main/default/objects/Job_Ticket__c/fields/Date_to_Design__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Design__c</fullName>
    <label>Date to Design</label>
    <type>Date</type>
</CustomField>