force-app/main/default/objects/Job_Ticket__c/fields/Deliver_by__c.field-meta.xml
<CustomField>
    <fullName>Deliver_by__c</fullName>
    <label>Deliver by</label>
    <type>Date</type>
</CustomField>