force-app/main/default/objects/Job_Ticket__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <formula>&quot;&lt;=3:00PM&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Time</label>
    <type>Text</type>
</CustomField>