force-app/main/default/objects/Job_Ticket__c/fields/Design_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Design_Consultation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Consultation</label>
    <type>Checkbox</type>
</CustomField>