force-app/main/default/objects/Job_Ticket__c/fields/Designer__c.field-meta.xml
<CustomField>
    <fullName>Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>