force-app/main/default/objects/Job_Ticket__c/fields/Dimensions_L_x_H__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_L_x_H__c</fullName>
    <label>Dimensions (L x H)</label>
    <type>TextArea</type>
</CustomField>