force-app/main/default/objects/Job_Ticket__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <formula>RIGHT(Name , LEN(Name)- 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate</label>
    <type>Text</type>
</CustomField>