force-app/main/default/objects/Job_Ticket__c/fields/Estimate_Comments__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Comments__c</fullName>
    <label>Estimate Comments</label>
    <type>TextArea</type>
</CustomField>