force-app/main/default/objects/Job_Ticket__c/fields/Estimate_For__c.field-meta.xml
<CustomField>
    <fullName>Estimate_For__c</fullName>
    <label>Estimate For</label>
    <length>100</length>
    <type>Text</type>
</CustomField>