force-app/main/default/objects/Job_Ticket__c/fields/Estimate_Only__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimate Only</label>
    <type>Checkbox</type>
</CustomField>