force-app/main/default/objects/Job_Ticket__c/fields/Export_to_InCopy__c.field-meta.xml
<CustomField>
    <fullName>Export_to_InCopy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export to InCopy</label>
    <type>Checkbox</type>
</CustomField>