force-app/main/default/objects/Job_Ticket__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <label>File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName
        >output from CD - indd file + high res PDF (offset crop marks .25)</fullName>
                <label
        >output from CD - indd file + high res PDF (offset crop marks .25)</label>
            </value>
            <value>
                <fullName
        >FTP - indd file + high res PDF (offset crop marks .25)</fullName>
                <label
        >FTP - indd file + high res PDF (offset crop marks .25)</label>
            </value>
            <value>
                <fullName>FTP - high res PDF (offset crop marks .25)</fullName>
            </value>
            <value>
                <fullName>mag .pdf</fullName>
            </value>
            <value>
                <fullName>viewable .pdf (single pg)</fullName>
            </value>
            <value>
                <fullName>printable .pdf (single pg)</fullName>
            </value>
            <value>
                <fullName>printable .pdf (printer SPRD)</fullName>
            </value>
            <value>
                <fullName>viewable and printable .pdfs (single pg)</fullName>
            </value>
            <value>
                <fullName
        >viewable .pdf (single pg) + printable .pdf (printer SPRD)</fullName>
                <label
        >viewable .pdf (single pg) + printable .pdf (printer SPRD)</label>
            </value>
            <value>
                <fullName>.jpg file</fullName>
            </value>
            <value>
                <fullName>HIGH RES .jpg file</fullName>
            </value>
            <value>
                <fullName>.jpg file (30K max)</fullName>
            </value>
            <value>
                <fullName>.svg file</fullName>
            </value>
            <value>
                <fullName>.eps file</fullName>
            </value>
            <value>
                <fullName>.png file</fullName>
            </value>
            <value>
                <fullName>.tif file</fullName>
            </value>
            <value>
                <fullName>.gif file</fullName>
            </value>
            <value>
                <fullName>.pptx file</fullName>
            </value>
            <value>
                <fullName>InDesign file</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>