force-app/main/default/objects/Job_Ticket__c/fields/File_Custom__c.field-meta.xml
<CustomField>
    <fullName>File_Custom__c</fullName>
    <label>File (Custom)</label>
    <type>TextArea</type>
</CustomField>