force-app/main/default/objects/Job_Ticket__c/fields/Final_due_from_ARC__c.field-meta.xml
<CustomField>
    <fullName>Final_due_from_ARC__c</fullName>
    <label>Final due from ARC</label>
    <type>Date</type>
</CustomField>