force-app/main/default/objects/Job_Ticket__c/fields/Final_edits_due_back_from_Originator__c.field-meta.xml
<CustomField>
    <fullName>Final_edits_due_back_from_Originator__c</fullName>
    <label>Final edits due back from Originator</label>
    <type>Date</type>
</CustomField>