force-app/main/default/objects/Job_Ticket__c/fields/Finished_Job_Due__c.field-meta.xml
<CustomField>
    <fullName>Finished_Job_Due__c</fullName>
    <label>Finished Job Due</label>
    <type>Date</type>
</CustomField>