force-app/main/default/objects/Job_Ticket__c/fields/Finished_Size_L_x_H__c.field-meta.xml
<CustomField>
    <fullName>Finished_Size_L_x_H__c</fullName>
    <label>Finished Size (L x H)</label>
    <type>TextArea</type>
</CustomField>