force-app/main/default/objects/Job_Ticket__c/fields/First_Proof_Due__c.field-meta.xml
<CustomField>
    <fullName>First_Proof_Due__c</fullName>
    <label>First Proof Due</label>
    <type>Date</type>
</CustomField>