force-app/main/default/objects/Job_Ticket__c/fields/First_Proof_Out__c.field-meta.xml
<CustomField>
    <fullName>First_Proof_Out__c</fullName>
    <label>First Proof Out</label>
    <type>Date</type>
</CustomField>