force-app/main/default/objects/Job_Ticket__c/fields/Flat_Size_L_x_H__c.field-meta.xml
<CustomField>
    <fullName>Flat_Size_L_x_H__c</fullName>
    <label>Flat Size (L x H)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>