force-app/main/default/objects/Job_Ticket__c/fields/Foam_Core__c.field-meta.xml
<CustomField>
    <fullName>Foam_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foam Core</label>
    <type>Checkbox</type>
</CustomField>