force-app/main/default/objects/Job_Ticket__c/fields/Highlight_Color__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Color__c</fullName>
    <label>Highlight Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>