force-app/main/default/objects/Job_Ticket__c/fields/Imprint_Area_L_x_H__c.field-meta.xml
<CustomField>
    <fullName>Imprint_Area_L_x_H__c</fullName>
    <label>Imprint Area (L x H)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>