force-app/main/default/objects/Job_Ticket__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>