force-app/main/default/objects/Job_Ticket__c/fields/Insert_Job_Order_Data__c.field-meta.xml
<CustomField>
    <fullName>Insert_Job_Order_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insert Job Order Data</label>
    <type>Checkbox</type>
</CustomField>