force-app/main/default/objects/Job_Ticket__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>Job_Order__c</referenceTo>
    <relationshipLabel>Job Tickets</relationshipLabel>
    <relationshipName>Job_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>