force-app/main/default/objects/Job_Ticket__c/fields/Job_Order_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Link__c</fullName>
    <formula
  >HYPERLINK(&quot;/&quot; &amp; Job_Order__r.Id ,&quot;Mark as Job Ticket Created&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order</label>
    <type>Text</type>
</CustomField>