force-app/main/default/objects/Job_Ticket__c/fields/Job_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Name__c</fullName>
    <formula>Job_Order__r.Job_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order Name</label>
    <type>Text</type>
</CustomField>