force-app/main/default/objects/Job_Ticket__c/fields/Job_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Status__c</fullName>
    <formula>TEXT( Job_Order__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order Status</label>
    <type>Text</type>
</CustomField>