force-app/main/default/objects/Job_Ticket__c/fields/Job_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Order_Type__c</fullName>
    <formula>TEXT(Job_Order__r.Job_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Order Type</label>
    <type>Text</type>
</CustomField>