force-app/main/default/objects/Job_Ticket__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Conference Bags</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Glasses and Napkins</fullName>
            </value>
            <value>
                <fullName>Lanyards and Notebooks</fullName>
            </value>
            <value>
                <fullName>Mail Services Order</fullName>
            </value>
            <value>
                <fullName>Print Order Production</fullName>
            </value>
            <value>
                <fullName>Print Order Production - Signs</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
                <isActive>false</isActive>
                <label>Estimate</label>
            </value>
            <value>
                <fullName>Estimate Request</fullName>
                <isActive>false</isActive>
                <label>Estimate Request</label>
            </value>
            <value>
                <fullName>General</fullName>
                <isActive>false</isActive>
                <label>General</label>
            </value>
            <value>
                <fullName>Signs (Kelli)</fullName>
                <isActive>false</isActive>
                <label>Signs (Kelli)</label>
            </value>
            <value>
                <fullName>Signs (Stephan)</fullName>
                <isActive>false</isActive>
                <label>Signs (Stephan)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>