force-app/main/default/objects/Job_Ticket__c/fields/Mag_PDF_Due__c.field-meta.xml
<CustomField>
    <fullName>Mag_PDF_Due__c</fullName>
    <label>Mag PDF Due</label>
    <type>Date</type>
</CustomField>