force-app/main/default/objects/Job_Ticket__c/fields/Mailing_House__c.field-meta.xml
<CustomField>
    <fullName>Mailing_House__c</fullName>
    <label>Mailing House</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admail</fullName>
            </value>
            <value>
                <fullName>Fry</fullName>
            </value>
            <value>
                <fullName>MailRite</fullName>
            </value>
            <value>
                <fullName>Paul Baker Printing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>