force-app/main/default/objects/Job_Ticket__c/fields/Mailing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Instructions__c</fullName>
    <label>Mailing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>