force-app/main/default/objects/Job_Ticket__c/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <label>Materials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>