force-app/main/default/objects/Job_Ticket__c/fields/NO_Crop_Marks__c.field-meta.xml
<CustomField>
    <fullName>NO_Crop_Marks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NO Crop Marks</label>
    <type>Checkbox</type>
</CustomField>