force-app/main/default/objects/Job_Ticket__c/fields/of_Folds__c.field-meta.xml
<CustomField>
    <fullName>of_Folds__c</fullName>
    <label># of Folds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>