force-app/main/default/objects/Job_Ticket__c/fields/of_Pages__c.field-meta.xml
<CustomField>
    <fullName>of_Pages__c</fullName>
    <label># of Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>