force-app/main/default/objects/Job_Ticket__c/fields/Paper_Stock__c.field-meta.xml
<CustomField>
    <fullName>Paper_Stock__c</fullName>
    <label>Paper Stock</label>
    <length>100</length>
    <type>Text</type>
</CustomField>