force-app/main/default/objects/Job_Ticket__c/fields/PowerPoint_Slides__c.field-meta.xml
<CustomField>
    <fullName>PowerPoint_Slides__c</fullName>
    <label>PowerPoint Slides</label>
    <type>TextArea</type>
</CustomField>