force-app/main/default/objects/Job_Ticket__c/fields/PowerPoint_Slides_Specs__c.field-meta.xml
<CustomField>
    <fullName>PowerPoint_Slides_Specs__c</fullName>
    <label>PowerPoint Slides Specs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 x 7.5 (Standard)</fullName>
            </value>
            <value>
                <fullName>10 x 5.63 (Wide)</fullName>
            </value>
            <value>
                <fullName
        >BOTH: 10 x 7.5 (Standard) + 10 x 5.63 (Wide)</fullName>
                <label>BOTH: 10 x 7.5 (Standard) + 10 x 5.63 (Wide)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>