force-app/main/default/objects/Job_Ticket__c/fields/Press__c.field-meta.xml
<CustomField>
    <fullName>Press__c</fullName>
    <label>Press</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Way</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Epson</fullName>
            </value>
            <value>
                <fullName>Engrave</fullName>
            </value>
            <value>
                <fullName>Fry</fullName>
            </value>
            <value>
                <fullName>Paul Baker</fullName>
            </value>
            <value>
                <fullName>GotPrint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>