force-app/main/default/objects/Job_Ticket__c/fields/Press_Date__c.field-meta.xml
<CustomField>
    <fullName>Press_Date__c</fullName>
    <label>Press Date</label>
    <type>Date</type>
</CustomField>