force-app/main/default/objects/Job_Ticket__c/fields/Print_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Print_Quantity__c</fullName>
    <label>Print Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>