force-app/main/default/objects/Job_Ticket__c/fields/Printer__c.field-meta.xml
<CustomField>
    <fullName>Printer__c</fullName>
    <label>Printer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delta Print</fullName>
            </value>
            <value>
                <fullName>GotPrint</fullName>
            </value>
            <value>
                <fullName>RUSH Imprint</fullName>
            </value>
            <value>
                <fullName>Quad</fullName>
            </value>
            <value>
                <fullName>Eclipse Awards</fullName>
            </value>
            <value>
                <fullName>FALCOR</fullName>
            </value>
            <value>
                <fullName>Kinkos</fullName>
            </value>
            <value>
                <fullName>Fabric Sign Guys</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
                <isActive>false</isActive>
                <label>ARC</label>
            </value>
            <value>
                <fullName>Fry Communications</fullName>
                <isActive>false</isActive>
                <label>Fry Communications</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>