force-app/main/default/objects/Job_Ticket__c/fields/Printer_Custom__c.field-meta.xml
<CustomField>
    <fullName>Printer_Custom__c</fullName>
    <label>Printer (Custom)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>