force-app/main/default/objects/Job_Ticket__c/fields/Printer_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Printer_Estimate__c</fullName>
    <label>Printer Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>