force-app/main/default/objects/Job_Ticket__c/fields/Printer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Printer_Notes__c</fullName>
    <label>Printer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>