force-app/main/default/objects/Job_Ticket__c/fields/Request_Update__c.field-meta.xml
<CustomField>
    <fullName>Request_Update__c</fullName>
    <inlineHelpText>Request update from Design</inlineHelpText>
    <label>Request Status Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>