force-app/main/default/objects/Job_Ticket__c/fields/Requested_Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Mail_Date__c</fullName>
    <label>Requested Mail Date</label>
    <type>Date</type>
</CustomField>