force-app/main/default/objects/Job_Ticket__c/fields/Save_New_File__c.field-meta.xml
<CustomField>
    <fullName>Save_New_File__c</fullName>
    <label>Save New File (T-Drive)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>