force-app/main/default/objects/Job_Ticket__c/fields/Save_New_File_Display__c.field-meta.xml
<CustomField>
    <fullName>Save_New_File_Display__c</fullName>
    <formula
  >IF(ISBLANK(Save_New_File_URL__c),&quot; &quot;,HYPERLINK(Save_New_File_URL__c, &quot;View File&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Save New File</label>
    <type>Text</type>
</CustomField>