force-app/main/default/objects/Job_Ticket__c/fields/Save_New_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Save_New_File_URL__c</fullName>
    <label>Save New File (URL)</label>
    <type>Url</type>
</CustomField>