force-app/main/default/objects/Job_Ticket__c/fields/Scored__c.field-meta.xml
<CustomField>
    <fullName>Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scored</label>
    <type>Checkbox</type>
</CustomField>