force-app/main/default/objects/Job_Ticket__c/fields/Select_Co_Designers__c.field-meta.xml
<CustomField>
    <fullName>Select_Co_Designers__c</fullName>
    <label>Select Co-Designer(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crystal Hopson</fullName>
            </value>
            <value>
                <fullName>Kelly Martinelli</fullName>
            </value>
            <value>
                <fullName>Lisa Zolfarelli</fullName>
            </value>
            <value>
                <fullName>Shelley Botts</fullName>
            </value>
            <value>
                <fullName>Trevor Andersen</fullName>
                <isActive>false</isActive>
                <label>Trevor Andersen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>