force-app/main/default/objects/Job_Ticket__c/fields/Send_To__c.field-meta.xml
<CustomField>
    <fullName>Send_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Viewable PDF Proof - Send To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>