force-app/main/default/objects/Job_Ticket__c/fields/Send_to_Copy_Editor__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Copy_Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send to Copy Editor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>