force-app/main/default/objects/Job_Ticket__c/fields/Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Instructions__c</fullName>
    <label>Shipping Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>