force-app/main/default/objects/Job_Ticket__c/fields/Sign_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sign_Notes__c</fullName>
    <label>Sign Notes</label>
    <type>TextArea</type>
</CustomField>